updated tree controller